PR #806を1.20.1 / Forge向けに補正